@@ -1,0 +1,1 @@
+<?php require './img_auth.php'; ?>
